--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,4 @@
 ---
-- name: broker
-  src: https://github.com/alexandrubau/ansible-broker.git
+dependencies:
+  - name: broker
+    src: https://github.com/alexandrubau/ansible-broker.git
