--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,4 @@
 ---
 dependencies:
-  - name: broker
-    src: https://github.com/alexandrubau/ansible-broker.git
+  - name: core
+    src: https://github.com/alexandrubau/ansible-core.git
