--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,3 @@
 ---
-- name: broker
-  src: https://github.com/alexandrubau/ansible-broker.git
+- name: core
+  src: https://github.com/alexandrubau/ansible-core.git
